# claimsman

./: .gitignore  README.md  alembic.ini  documentation.md  pyproject.toml  requirements.txt
apps/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx
apps/web/: __init__.py  config.py  db.py  logging_setup.py  main.py
apps/web/alembic/: env.py
apps/web/models/: __init__.py  audit_log.py  base.py  claim.py  decision.py  document.py  extracted_field.py  finding.py  page.py  upload.py
apps/web/pipeline/: __init__.py  runner.py
apps/web/routers/: audit.py  claims.py  dev.py  domains.py  (+4 more)
config/domain_rules/: __init__.py  common.py  health_insurance.py  motor_insurance.py
config/domains/: health_insurance.yaml  motor_insurance.yaml
config/schemas/: correspondence.yaml  discharge_summary.yaml  driver_license.yaml  insurance_card.yaml  invoice.yaml  medical_report.yaml  photo_of_damage.yaml  police_report.yaml  prescription.yaml  receipt.yaml  repair_estimate.yaml  repair_invoice.yaml  unknown.yaml  vehicle_registration.yaml
deploy/: .env.example  docker-compose.yml
docs/: claimsman-overview.md  runbook.md
scripts/: bootstrap.sh  capture.py  deploy.sh  logs.sh  visual-test.sh
task/: SPEC.md
tests/: conftest.py  demo_bg_bundle.py  demo_handwriting.py  e2e_browser.py  test_api_smoke.py  test_claims_router_helpers.py  test_domain_rules_common.py  test_domain_rules_health.py  test_domain_rules_motor.py  test_extract_parsers.py  test_ingest.py  test_schemas_registry.py
(+18 files in other folders)
